# optional-field

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
optional-fields-serde-macro/: Cargo.toml
optional-fields-serde-macro/src/: lib.rs
serde_optional_fields_macro/: Cargo.toml
serde_optional_fields_macro/src/: lib.rs
serde_ternary_fields_macro/: Cargo.toml
serde_ternary_fields_macro/src/: lib.rs  util.rs
src/: lib.rs
tests/: option.rs  serde.rs
