[workspace]
members = [
    "optional-fields-serde-macro",
]

[package]
name = "optional-field"
version = "0.1.3"
authors = ["CV Partner <techsupport@cvpartner.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Alternative data type to Option for representing values that can have 3 states: present, missing or null"
repository = "https://github.com/cvpartner/optional-field"
keywords = ["serde", "trinary", "option", "field"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
optional-fields-serde-macro = { path = "./optional-fields-serde-macro", version = "0.1.0" }

[dev-dependencies]
serde_json = { version = "1" }

[features]
default = ["serde"]

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]