[package]
name = "optional-fields-serde-macro"
version = "0.1.1"
authors = ["CV Partner <techsupport@cvpartner.com>"]
edition = "2018"
license = "MIT"
description = "Macro for optional-field crate serde integration"
repository = "https://github.com/cvpartner/optional-field/tree/master/optional-fields-serde-macro"
keywords = ["serde", "trinary", "option", "field"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.1"
quote = "1.0.0"
syn = { version = "1.0.3", features = ["full"] }
